--- a/css/games.css
+++ b/css/games.css
@@ -1,14 +1,9 @@
-a {
-    color: #000;
-    text-decoration: none;
-}
-
-._news {
+._games {
     background: #FFFDF6;
     padding-bottom: 10px;
 }
 
-._news-title {
+._page-title {
     font-family: Noto Sans TC;
     font-size: 36px;
     font-weight: 500;
@@ -17,20 +12,11 @@ a {
 
 }
 
-
-._newscard {
-    padding-top: 10px;
-    text-decoration: none;
-    text-align: center;
-}
-
-._newscard:hover {
-    opacity: 75%;
-}
-
-._newscard h5 {
+._card {
     font-family: Noto Sans TC;
     font-size: 24px;
     line-height: 35px;
-
+    text-decoration: none;
+    text-align: center;
+    color: #000;
 }
